--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,13 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
+      "doctrine/doctrine-bundle": "~1.0",
+      "doctrine/doctrine-fixtures-bundle": "^3.3",
+      "knplabs/knp-paginator-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "4.4.*",
         "symfony/console": "4.4.*",
+      "symfony/dom-crawler": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/expression-language": "4.4.*",
         "symfony/flex": "^1.3.1",
@@ -21,6 +25,7 @@
         "symfony/process": "4.4.*",
         "symfony/security-bundle": "4.4.*",
         "symfony/serializer-pack": "*",
+      "symfony/swiftmailer-bundle": "^3.4",
         "symfony/translation": "4.4.*",
         "symfony/twig-pack": "*",
         "symfony/validator": "4.4.*",
@@ -28,6 +33,8 @@
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
+      "hautelook/alice-bundle": "^2.5",
+      "mbezhanov/faker-provider-collection": "^1.2",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.0",
         "symfony/profiler-pack": "*",
