Mise à place de l'entité Dealer

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "symfony/twig-pack": "*",
         "symfony/validator": "4.4.*",
         "symfony/web-link": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+      "ext-json": "*"
     },
     "require-dev": {
       "hautelook/alice-bundle": "^2.5",
